Fix scrollbar on Firefox file viewer

--- a/SplunkAppForWazuh/appserver/static/css/styles/common.css
+++ b/SplunkAppForWazuh/appserver/static/css/styles/common.css
@@ -20,9 +20,8 @@
   outline-color: transparent !important;
 } */
 
-.wzJsonXmlEditorBody, .wzJsonXmlEditorBody .CodeMirror{
-  height: 100%;
-  min-height: 300px;
+.wzJsonXmlEditorBody {
+  height: calc(100% - 22px);
 }
 
 /*
